# OneDMin

./: .gitignore  CMakeLists.txt  INSTALL  NOTES  README.md  build.sh  environment.yml  meta.yaml
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/: lj.table
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/: sub-1.x
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a1/: qc.in
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a11/: qc.in
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a13/: fort.80  output  qc.in
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a14/: qc.mol
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a15/: input
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a17/: output  qc.in
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a2/: fort.80
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a20/: fort.80  output
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a3/: fort.80
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a4/: qc.in
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a8/: fort.80  qc.in
examples/1_N2/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/a9/: fort.80  output
examples/1_N2/dictionary/r0/: input
examples/CH3OH+Ar/: 1dmin.sub
examples/CH3OH+Ar/r0/: ar.xyz  ch3oh.xyz  he.xyz  input  m.x  qc.mol
examples/CH4+N2/: ch4.xyz  input
examples/CH4_N2/: bath.xyz  target.xyz  zero.ene
examples/CH4_N2/parallel/: elstruct.x  submit.mako
examples/CH4_N2/parallel/geoms/: ch4.xyz  n2.xyz
examples/CH4_N2/serial/: bath.xyz  m.x  qc.in
examples/N2/1_Old/database/ON/O1N2/O1N2/[O-][N+]hN/: obabel-guess.xyz
examples/N2/1_Old/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/: output  q.x
examples/N2/1_Old/database/ON/O1N2/O1N2/[O-][N+]hN/1dmin/1DMIN17404/: ingen.pl
examples/N2/1_Old/dictionary/: batch-submit.sh  lj.pl
examples/N2/1_Old/dictionary/r0/: qc.template
py1dmin/: __init__.py  _in_parser.py  _routines.py  driver.py  functions.py  ljdriver.py  parse_input.py  run.py  test.py
py1dmin/interface/: reader.py  util.py  writer.py
py1dmin/templates/: 1dmin_inp.mako  submit.mako
scripts/: dupecheck.pl  minconf.pl  obabel
scripts/python/: onedmin.py  run.py
scripts/python/round/: egdn.xyz  minmax.pl  obabel-confs.xyz  obabel-guess.xyz  round.py  smallest.geo
scripts/python/run/: onedmin.batch
scripts/python/run/run10/: m.x
scripts/python/run/run6/: m.x
scripts/python/save/SPC/N2/IJGRMHOSHXDMSA/0/1/UHFFFAOYSA-N/: dir.yaml
scripts/python/templates/: 1dmin_submit.mako
src/: Makefile  Makefile_new  auto1dmin.f  auto1dmin.x  dd.f  exp6.f  mass.f  molpro.f  onedmin.f  rohM.f  rohMP.f  rohT.f  roohT.f  spin.f  tbplusexp6-2.f  tbplusexp6all.f  tmp
src/potentials/: ch3ohM.f  paramls.inc
(+78 files in other folders)
